--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@radix-ui/themes": "^2.0.3",
     "firebase": "^10.8.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "zustand": "^4.5.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
